# SFF-Scraper

./: README.rst  pyproject.toml  requirements.txt
sff_scraper/: sff_scraper.py
tests/: test_sff_scraper.py
