[tool.poetry]
name = "SFF-Scraper"
version = "0.1.0"
description = ""
authors = ["Capybasilisk <capybasilisk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
bs4 = "^0.0.1"
clevercsv = "^0.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
